[package]
name = "trypanophobia"
authors = ["3moon <erin@hecke.rs>"]
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
goblin = "0.5.1"
structopt = "0.3.26"
thiserror = "1.0.30"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
]
