[package]
name = "trypanophobia"
authors = ["3moon <erin@hecke.rs>"]
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
exe = "0.4.5"
pelite = "0.9.0"
structopt = "0.3.26"
thiserror = "1.0.30"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
]

[dependencies.iced-x86]
version = "1.16.0"
# path = "../../iced/src/rust/iced-x86"
features = ["code_asm"]